<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.levelp.chat.ProfileActivity">

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="320dp"
        android:layout_height="240dp"
        android:background="@drawable/bateau"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:padding="8dp"
        />

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint"
        android:layout_below="@+id/user_image"
        android:padding="8dp"
        android:text="@string/login_text"
        android:textSize="24sp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/description_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_hint"
        android:padding="8dp"
        android:text="@string/description_text"
        android:textSize="16sp"
        android:gravity="fill"
        android:inputType="textMultiLine"
        android:lines="5"
        android:layout_below="@+id/user_image"
        android:layout_marginTop="48dp"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="98dp"
        android:layout_height="48dp"
        android:text="@string/logout"
        android:layout_below="@id/description_tv"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"/>

</RelativeLayout>
